--- a/app/globals.css
+++ b/app/globals.css
@@ -187,11 +187,21 @@ button p {
   }
 
   h2 {
-    font-size: 30pt;
+    font-size: 16pt;
+    line-height: 16pt;
+  }
+
+  h3 {
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  h4 {
+    font-size: 16px;
   }
 
   h5 {
-    font-size: 2em;
+    font-size: 16px;
   }
 
   p {
